k8s-manifests/debezium-play-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: debezium-play-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/debezium-play-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/debezium-play-default: "true"
